--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,7 +16,7 @@ jobs:
     uses: actions/setup-node@master 
   - run: npm install 
   - run: npm run build 
-  - run: tar -zcvf release.tgz .nuxt static app.js nuxt.config.js package.json package-lock.json ecosystem.config.js 
+  - run: tar -zcvf release.tgz .nuxt static nuxt.config.js package.json package-lock.json pm2.config.json 
  # 发布 Release 
  - name: Create Release 
    id: create_release 
@@ -28,8 +28,7 @@ jobs:
     release_name: Release ${{ github.ref }} 
     draft: false 
     prerelease: false 
-  # 上传构建结果到 
-  Release 
+  # 上传构建结果到 Release 
   - name: Upload Release Asset 
     id: upload-release-asset 
     uses: actions/upload-release-asset@master 
@@ -50,9 +49,9 @@ jobs:
       password: ${{ secrets.PASSWORD }} 
       port: ${{ secrets.PORT }} 
       script: | 
-        cd /root/pm2-test 
-        wget https://github.com/lipengzhou/realworld- nuxtjs/releases/latest/download/release.tgz 
+        cd /root/realworld
+        wget https://github.com/Rednuo/realworld/releases/latest/download/release.tgz 
         -O release.tgz 
         tar zxvf release.tgz
         npm install --production 
-        pm2 reload pm2.config.js
+        pm2 reload pm2.config.json
