--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: GitHub Actions Demo
+name: Publish And Deplay Demo
 on:
   push:
     tags:
@@ -39,7 +39,6 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.TOKEN }}
       with:
         upload_url: ${{ steps.create_release.outputs.upload_url }}
-      # This pulls from the CREATE RELEASE step above, referencing it's ID to get its outputs object, which include a `upload_url`. See this blog post for more info: https://jasonet.co/posts/new-features-of-github-actions/#passing-data-to-future- steps 
         asset_path: ./release.tgz
         asset_name: release.tgz
         asset_content_type: application/x-tgz
@@ -53,8 +52,7 @@ jobs:
         port: ${{ secrets.PORT }}
         script: |
           cd /root/realworld
-          wget https://github.com/Rednuo/realworld/releases/latest/download/release.tgz
-          -O release.tgz
+          wget https://github.com/Rednuo/realworld/releases/latest/download/release.tgz -O release.tgz
           tar zxvf release.tgz
           npm install --production
           pm2 reload pm2.config.json
